--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "QuickShare",
   "version": "1.0.0",
   "description": "It will be use to share file anywhere on internet",
-  "main": "index.js",
+  "main": "server.js",
   "author": "Ankit Jodhani",
   "license": "MIT",
   "scripts": {
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "serve": "node server.js"
   },
