--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "serve": "node indexgit .js"
+    "serve": "node index .js"
   },
   "dependencies": {
     "aws-sdk": "^2.1354.0",
