--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "author": "Ankit Jodhani",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js",
-    "serve": "node server.js"
+    "dev": "nodemon index.js",
+    "serve": "node index.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1354.0",
